crates/pardosa-schema/tests/compile_fail/evt_004_via_alias.stderr
error[E0277]: the trait bound `usize: GenomeSafe` is not satisfied
 --> tests/compile_fail/evt_004_via_alias.rs:6:8
  |
6 |     n: Size,
  |        ^^^^ the trait `GenomeSafe` is not implemented for `usize`
  |
  = help: the following other types implement trait `GenomeSafe`:
            i128
            i16
            i32
            i64
            i8
            u128
            u16
            u32
          and $N others

error[E0277]: the trait bound `usize: Encode` is not satisfied
 --> tests/compile_fail/evt_004_via_alias.rs:4:21
  |
4 | #[derive(Serialize, GenomeSafe)]
  |                     ^^^^^^^^^^ the trait `Encode` is not implemented for `usize`
  |
  = help: the following other types implement trait `Encode`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            u128
          and $N others
  = note: this error originates in the derive macro `GenomeSafe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Decode` is not satisfied
 --> tests/compile_fail/evt_004_via_alias.rs:6:8
  |
6 |     n: Size,
  |        ^^^^ the trait `Decode` is not implemented for `usize`
  |
  = help: the following other types implement trait `Decode`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            u128
          and $N others
